# cmake_blank

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/app1/: CMakeLists.txt
cmake/: ProjectMacros.cmake
include/io/: talker.h
src/io/: CMakeLists.txt
